tests/negative/call_not_defined_functions.c
func()
{
    int a;
    a = 1;
    return a;
}
main()
{
    int b;
    b = 2;
    cnuf();
}
